--- a/ui/package.json
+++ b/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "opengrc-ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -24,7 +24,8 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-separator": "^1.1.0"
+    "@radix-ui/react-separator": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
