--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opengrc-api"
-version = "0.7.0"
+version = "0.8.0"
 edition = "2021"
 
 [dependencies]
@@ -33,5 +33,13 @@ redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
 
 # HTTP client
 reqwest = { version = "0.12", features = ["json"] }
+
+# AWS S3
+aws-config = { version = "1.5", features = ["behavior-version-latest"] }
+aws-sdk-s3 = "1.65"
+aws-credential-types = "1.2"
+
+# File handling
+mime_guess = "2.0"
 
 [dev-dependencies]
