--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opengrc-api"
-version = "0.10.0"
+version = "1.0.0"
 edition = "2021"
 
 [dependencies]
@@ -42,5 +42,8 @@ aws-credential-types = "1.2"
 
 # File handling
 mime_guess = "2.0"
+
+# Search
+meilisearch-sdk = "0.28"
 
 [dev-dependencies]
