--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opengrc-api"
-version = "1.0.0"
+version = "1.2.0"
 edition = "2021"
 
 [dependencies]
@@ -19,11 +19,17 @@ serde_json = "1.0"
 
 # Utilities
 uuid = { version = "1.11", features = ["v4", "serde"] }
+async-trait = "0.1"
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "2.0"
 anyhow = "1.0"
 dotenvy = "0.15"
 once_cell = "1.20"
+
+# Encryption
+aes-gcm = "0.10"
+base64 = "0.22"
+rand = "0.8"
 
 # Logging and tracing
 tracing = "0.1"
