--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opengrc-api"
-version = "1.2.0"
+version = "1.3.0"
 edition = "2021"
 
 [dependencies]
@@ -11,7 +11,8 @@ tower = "0.5"
 tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-gzip"] }
 
 # Database
-sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }
+sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate", "rust_decimal"] }
+rust_decimal = { version = "1.36", features = ["serde", "serde-with-str"] }
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
