--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opengrc-api"
-version = "1.4.0"
+version = "1.6.0"
 edition = "2021"
 
 [dependencies]
@@ -42,10 +42,17 @@ redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
 # HTTP client
 reqwest = { version = "0.12", features = ["json"] }
 
-# AWS S3
+# AWS SDKs
 aws-config = { version = "1.5", features = ["behavior-version-latest"] }
 aws-sdk-s3 = "1.65"
 aws-credential-types = "1.2"
+aws-sdk-sts = "1.51"
+aws-sdk-iam = "1.51"
+aws-sdk-cloudtrail = "1.55"
+aws-sdk-securityhub = "1.56"
+aws-sdk-config = "1.53"
+aws-sdk-ec2 = "1.90"
+aws-sdk-rds = "1.107"
 
 # File handling
 mime_guess = "2.0"
