--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opengrc-api"
-version = "1.9.0"
+version = "1.10.0"
 edition = "2021"
 
 [dependencies]
@@ -61,5 +61,11 @@ mime_guess = "2.0"
 meilisearch-sdk = "0.28"
 sha2 = "0.10.9"
 urlencoding = "2.1.3"
+
+# PDF Generation
+printpdf = "0.7"
+
+# Email (AWS SES)
+aws-sdk-sesv2 = "1.58"
 
 [dev-dependencies]
