feat: implement automated evidence collection - v1.11.0
- Add scheduled evidence snapshots with cron-based collection tasks
- Add evidence auto-linking to controls via regex mapping rules
- Add change detection with triggers and acknowledgment workflow
- Add evidence freshness scoring with SLA-based tracking
- Create evidence_automation service and 17 new API endpoints
- Add database migration with functions, triggers, and views
- Update plan.md and README.md (Phase 2 now 95% complete)

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opengrc-api"
-version = "1.10.0"
+version = "1.11.0"
 edition = "2021"
 
 [dependencies]
@@ -67,5 +67,9 @@ printpdf = "0.7"
 
 # Email (AWS SES)
 aws-sdk-sesv2 = "1.58"
+
+# Evidence Automation
+regex = "1.11"
+cron-parser = "0.8"
 
 [dev-dependencies]
