feat: complete SOC 2 report parser and user access reviews (Phase 3.1 & 3.3)
SOC 2 Report Parser:
- Add pdf-extract crate for PDF text extraction
- Create soc2_parser service with pattern matching for:
  - Report type detection (Type 1 vs Type 2)
  - Audit period extraction
  - Auditor firm identification
  - Opinion type detection (unqualified/qualified/adverse)
  - Trust services criteria extraction
  - Findings/exceptions extraction with severity
  - Subservice organizations and CUECs
- Add soc2_parsed_reports and soc2_findings tables
- Add API routes for parsing vendor documents
- Calculate confidence score for parsing results

User Access Reviews:
- Create comprehensive AccessReviewService with:
  - Campaign CRUD with progress tracking
  - Review item management
  - Bulk approve/revoke functionality
  - Access removal request and tracking
- Add access_removal_logs table for tracking removal actions
- Enhance access_review_campaigns with integration fields
- Enhance access_review_items with risk/MFA/admin tracking
- Integration sync for pulling users from:
  - Okta (with MFA and stale user detection)
  - Google Workspace (with 2-Step Verification)
  - Azure AD (with guest user tracking)
  - GitHub (with admin role detection)
- Add certification reports (JSON + CSV export)
- Create full Access Reviews UI page with:
  - Stats cards (campaigns, pending reviews, high risk, etc.)
  - Campaign table with progress indicators
  - Campaign detail sheet with user table
  - Bulk selection and review actions
  - Integration sync button
  - Report download functionality

Migration: 20251215090338_soc2_parsed_reports_and_access_reviews.sql
API Version: 1.16.0

--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "opengrc-api"
-version = "1.15.0"
+version = "1.16.0"
 edition = "2021"
 
 [dependencies]
@@ -71,5 +71,8 @@ aws-sdk-sesv2 = "1.58"
 # Evidence Automation
 regex = "1.11"
 cron-parser = "0.8"
+
+# PDF Parsing (for SOC 2 report extraction)
+pdf-extract = "0.7"
 
 [dev-dependencies]
